# Forge

./: .gitignore  Cargo.toml  P1.md  P10.md  P11.md  P12.md  P13.md  P14.md  P15.md  P2.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8.md  P9.md  README.md  deny.toml  design-system.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  vite.config.ts  ~$plan.md
agent-evals/: Cargo.toml  run_eval.rs
agent-evals/src/: evals.rs  evals_extra.rs  evals_extra2.rs  fixtures.rs  main.rs  product_scenarios.rs
agent-evals/src/evals/: anchor_regression.rs  author_voice.rs  belief_conflict.rs  burnout_signal_eval.rs  canon.rs  chapter_contract.rs  chapter_settlement.rs  character_state_versioning.rs  chronology_preservation.rs  companion_contract.rs  compiled_input_prompt.rs  context.rs  context_spine.rs  curated_context_eval.rs  e2e_scenarios.rs  emotional_arc_eval.rs  emotional_debt_diagnostics.rs  emotional_debt_extraction.rs  emotional_debt_planner.rs  emotional_debt_todayfive.rs  entity_apply_perf.rs  entity_repair_state.rs  entity_settlement.rs  fact_dedup.rs  false_belief_preservation.rs  feedback_diagnostics.rs  feedback_ghost.rs  feedback_planner.rs  flashback_identity.rs  focus_rebuild.rs  foundation.rs  ghost_feedback.rs  hook_triage.rs  idea_seed.rs  idea_seed_adversarial.rs  idea_seed_complex.rs  identity_reveal.rs  impact_scoped_recall.rs  input_compiler.rs  inspect_boundary_contract.rs  (+60 more)
agent-harness-core/: Cargo.toml
agent-harness-core/src/: actions.rs  agent_loop.rs  ambient.rs  compaction.rs  config.rs  context_pack.rs  context_window_guard.rs  credential_pool.rs  domain.rs  hermes_memory.rs  hooks.rs  lib.rs  llm.rs  permission.rs  planner.rs  prompt_cache.rs  ptc.rs  retry.rs  router.rs  run_trace.rs  skill_lifecycle.rs  skills.rs  task_packet.rs  tool_executor.rs  tool_registry.rs  vector_db.rs
agent-harness-core/src/compaction/: core.in.rs  microcompact.in.rs  recovery.in.rs
agent-harness-core/src/hermes_memory/: impl.in.rs  migration.in.rs  tests.in.rs  types.in.rs
agent-harness-core/src/provider/: mod.rs  openai_compat.rs  types.rs
agent-harness-core/src/tool_registry/: defaults.in.rs  types.in.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runtime.rs  agent_status.rs  api_integration_tests.rs  api_key.rs  app_paths.rs  app_state.rs  brain_service.rs  chapter_generation.rs  editor_realtime.rs  event_payloads.rs  events.rs  hermes_memory.rs  lib.rs  llm_runtime.rs  main.rs  manual_agent.rs  memory_context.rs  observation_bridge.rs  project_audit.rs  semantic_lint.rs  storage.rs  tests.rs  tool_bridge.rs  vector_db.rs  writer_observer.rs
src-tauri/src/ambient_agents/: co_writer.rs  context_fetcher.rs  continuity_watcher.rs  mod.rs  pacing_analyst.rs
src-tauri/src/brain_service/: functions_a.in.rs  functions_a_embedding.in.rs  functions_a_ingest.in.rs  functions_a_knowledge.in.rs  functions_b.in.rs  functions_b_index.in.rs  functions_b_query.in.rs  functions_b_search.in.rs  functions_b_tests.in.rs  types.in.rs
src-tauri/src/chapter_generation/: context.in.rs  draft_and_save.in.rs  mod.rs  pipeline.in.rs  runtime_artifacts.in.rs  settlement.in.rs  types_and_utils.in.rs
src-tauri/src/commands/: backups.rs  chapters.rs  diagnostics.rs  editor.rs  generation.rs  graph.rs  lore.rs  manual_agent.rs  metacognitive_recovery.rs  mod.rs  outline.rs  settings.rs  writer_agent.rs
src-tauri/src/storage/: content.in.rs  core.in.rs  diagnostics.in.rs  ops.in.rs  project.in.rs  types.in.rs
src-tauri/src/writer_agent/: anchor_carry.rs  author_voice.rs  canon.rs  (+42 more)
(+232 files in other folders)
