[package]
name = "agent-evals"
version = "0.1.0"
edition = "2021"
description = "Evaluation harness for Forge Writer Agent Kernel"

[[bin]]
name = "run_eval"
path = "run_eval.rs"

[dependencies]
agent-harness-core = { path = "../agent-harness-core" }
agent-writer = { path = "../src-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
