[package]
name = "agent-evals"
version = "0.1.0"
edition = "2021"
description = "Evaluation harness for Forge Writer Agent Kernel"

[[bin]]
name = "run_eval"
path = "src/main.rs"

[dependencies]
agent-harness-core = { path = "../agent-harness-core" }
agent-writer = { path = "../src-tauri" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
