[package]
name = "agent-harness-core"
version = "0.1.0"
edition = "2021"
description = "通用 AI Agent Runtime — LLM 流式、向量检索、记忆管理、技能萃取"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
jieba-rs = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true