[package]
name = "agent-writer"
version = "0.1.0"
description = "AI Novel Writing Desktop App"
authors = ["luo-cccc"]
edition = "2021"

[lib]
name = "agent_writer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-harness-core = { path = "../agent-harness-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
